<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_cat_title" >
        <CheckBoxPreference
            android:key="pref_update_screen"
            android:defaultValue="true"
            android:summary="@string/pref_update_screen_summary"
            android:title="@string/pref_update_screen_title" >
        </CheckBoxPreference>
    </PreferenceCategory>

    <ListPreference
        android:key="pref_sync_frequency"
        android:summary="@string/pref_sync_summary"
        android:entries="@array/sync_frequency"
        android:entryValues="@array/sync_frequency_values"
        android:title="@string/pref_sync_title" >
    </ListPreference>

    <EditTextPreference
        android:key="pref_feed"
        android:title="@string/pref_feed_title"
        android:defaultValue="@string/pref_feed"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1" >
    </EditTextPreference>

</PreferenceScreen>
